# utility-python-script

./: pyproject.toml
etc/utility-python-script/: check-file-age.json  rsync-python-script.json
